# siemensXLSprocessor

./: README.md  main.py  pyproject.toml  tmp_test.xlsx
helpers/: extract_part_number.py  xlsx_to_csv.py
test_data/: QUOTE MASTER LIST 2.csv  siemens_part_number_clean.csv
tests/: test_extract_part_number.py  test_xlsx_to_csv.py
tests/test_sample_data/: test_input.csv  test_output.csv
tests/test_sample_data/csv_out/: test_Second.csv
tmp_test_dir/: test.xlsx  test_input.csv
